--- a/src/Kanbas/Dashboard/index.css
+++ b/src/Kanbas/Dashboard/index.css
@@ -5,6 +5,37 @@
 }
 
 .kanbas-card {
+    display: flex;
     width: 400px;
     margin-left: 10px;
 }
+.add-btn {
+    background-color: #28a745 !important; 
+    border-color: #28a745 !important;
+}
+
+.update-btn {
+    background-color: #007bff !important; 
+    border-color: #007bff !important;
+}
+
+.deleteKKR-btn {
+    background-color: #dc3545 !important; 
+    border-color: #dc3545 !important;
+}
+
+.editKKR-btn {
+    background-color: #007bff !important; 
+    border-color: #007bff !important;
+}
+.save-btn{
+    background-color: #dc3545 !important;
+    border-color: #dc3545 !important;
+}
+.edit-btn {
+    background-color: #007bff !important;
+    border-color: #007bff !important;
+}
+
+
+
